--- a/trunk/makefile
+++ b/trunk/makefile
@@ -115,7 +115,7 @@ OPTIMIZE	:=
 #	to use.  For example, setting DEFINES to "DEBUG=1" will cause the
 #	compiler option "-DDEBUG=1" to be used.  Setting DEFINES to "DEBUG"
 #	would pass "-DDEBUG" on the compiler's command line.
-DEFINES		:= 
+DEFINES		:= SINGLE_BINARY
 
 #	specify special warning levels
 #	if unspecified default warnings will be used
