--- a/src/makefile
+++ b/src/makefile
@@ -227,7 +227,7 @@ APP_MIME_SIG = application/x-vnd.mmu_man-ThemeManager
 # 	will recreate only the "locales/en.catkeys" file. Use it as a template
 # 	for creating catkeys for other languages. All localization files must be
 # 	placed in the "locales" subdirectory.
-LOCALES = en
+LOCALES = en fr
 
 
 
