New and updated translations (#4)
Thanks to all translators:

Catalan (ca)	Davidmp
Czech (cs)		nkin
Croatian (hr)	zvacet
Czech (cs)	humdinger
English (British) (en_GB)	humdinger
Esperanto (eo)	Jakub Fabijan
French (fr)	Briseur
Friulian (fur)	tmtfx
German (de)	humdinger
Hindi (hi)	TejasMate
Indonesian (id)	mazbrili
Italian (it)	Gabriele Baldassarre
Polish (pl)	KapiX
Portuguese (pt)	Victor Domingos
Romanian (ro)	Emrys
Russian (ru)	Sergei Reznikov
Spanish (es)	unspacyar, jjpx
Swedish (sv)	Fredrik Modéen
Turkish (tr)	Emir Sarı
Ukrainian (uk)	Alexey Lugin

--- a/src/makefile
+++ b/src/makefile
@@ -227,9 +227,7 @@ APP_MIME_SIG = application/x-vnd.mmu_man-ThemeManager
 # 	will recreate only the "locales/en.catkeys" file. Use it as a template
 # 	for creating catkeys for other languages. All localization files must be
 # 	placed in the "locales" subdirectory.
-LOCALES = en de fr
-
-
+LOCALES = ca cs de en en_GB es fr fur hr id it pt ro sv tr uk
 
 
 ## include the makefile-engine
